Closed Bug 299204 Opened 21 years ago Closed 21 years ago

Crash if a marker is applied to an element that makes up the marker

Categories

(Core :: SVG, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jwatt, Assigned: tor)

Details

(Keywords: crash, testcase)

Attachments

(3 files, 1 obsolete file)

This is the top of my stack trace. nsSVGDefsFrame::QueryInterface(const nsID & aIID={...}, void * * aInstancePtr=0x00033034) Line 104 C++ nsSVGMarkerFrame::QueryInterface(const nsID & aIID={...}, void * * aInstancePtr=0x00033034) Line 83 + 0xc C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033080) Line 483 C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000330ec) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033158) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000331c4) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033230) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x0003329c) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033308) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033374) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000333e0) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x0003344c) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000334b8) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033524) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033590) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000335fc) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033668) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000336d4) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033740) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000337ac) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033818) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033884) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000338f0) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x0003395c) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000339c8) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033a34) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033aa0) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033b0c) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033b78) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033be4) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033c50) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033cbc) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033d28) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033d94) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033e00) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033e6c) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033ed8) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033f44) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00033fb0) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x0003401c) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x00034088) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++ nsSVGPathGeometryFrame::GetCanvasTM(nsIDOMSVGMatrix * * aCTM=0x000340f4) Line 488 + 0xa C++ nsSVGMarkerFrame::GetCanvasTM() Line 282 C++
Attached patch fix for testcase problem (obsolete) — — Splinter Review
This testcase is actually testing a different problem than the stacktrace you showed. The patch fixes the testcase problem - I need another test for the other.
Assignee: general → tor
Attachment #187816 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #187882 - Flags: review?(jonathan.watt)
Attachment #187882 - Flags: review?(jonathan.watt) → review+
Attachment #187882 - Flags: approval1.8b3?
Comment on attachment 187882 [details] [diff] [review] prevent marker reference loop a=bsmedberg for 6/30 only
Attachment #187882 - Flags: approval1.8b3? → approval1.8b3+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: