Bug 299204 - guard against <marker> reference loop.  r=jwatt, a=bsmedberg